[package]
name = "dj"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
futures = "0.3"

[dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "native"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.13"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]